# selfhost

./: .gitignore  Makefile  README.md  pyproject.toml
dockge/: compose.yml
dockge/stacks/dockflare/: compose.yml
dockge/stacks/dokploy/: compose.yaml
dockge/stacks/dozzle/: setup.sh
dockge/stacks/dozzle/data/: users.yml
dockge/stacks/immich-app/: compose.yml
dockge/stacks/n8n/: backup.sh  run.sh
dockge/stacks/teldrive/: compose.yml  run.sh
dockge/stacks/vscode/: compose.yml
dozzle/: compose.yml
dozzle/data/huy/: profile.json
n8n/: compose.yml
src/selfhost/: __init__.py  core.py  main.py
src/selfhost/providers/: github.py
tests/: test_main.py
