[project]
name = "selfhost"
version = "0.1.0"
description = "A CLI tool to list and manage your self-hosted tools from GitHub."
authors = [{ name = "Nguyen Huy", email = "nguyenhuy158@gmail.com" }]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
selfhost = "selfhost.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
